--- a/index.html
+++ b/index.html
@@ -33,10 +33,47 @@
     <div id="stage">
         
       <!-- Your Awesome Design -->
-        <img src="" alt="Google Doodle">
-        
-        <img id="line" src="img/test.svg" alt="">    
-
+       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 433.8 207.4" style="enable-background:new 0 0 433.8 207.4;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:none;stroke:#000000;stroke-width:3;stroke-miterlimit:10;}
+	.st1{fill:#FEE091;}
+	.st2{fill:#C7B689;}
+	.st3{fill:none;stroke:#000000;stroke-width:2;stroke-miterlimit:10;}
+</style>
+<g id="glasses">
+	<circle class="st0" cx="129.7" cy="132.3" r="45.1"/>
+	<circle class="st0" cx="254.1" cy="132.3" r="45.1"/>
+	<path class="st0" d="M174.8,126.4c11.4-3,22.8-3,34.2,0"/>
+	<path d="M84.6,131.8H76c-1.8,0-3.3-1.5-3.3-3.3v-1.8c0-1.8,1.5-3.3,3.3-3.3h8.6V131.8z"/>
+	<path d="M307.8,131.8h-8.6v-8.4h8.6c1.8,0,3.3,1.5,3.3,3.3v1.8C311.1,130.4,309.6,131.8,307.8,131.8z"/>
+</g>
+<g id="tape">
+	<path class="st1" d="M201.6,128.9h-19.3c-2.1,0-3.8-1.7-3.8-3.8v-1.5c0-2.1,1.7-3.8,3.8-3.8h19.3c2.1,0,3.8,1.7,3.8,3.8v1.5
+		C205.4,127.2,203.7,128.9,201.6,128.9z"/>
+	<path class="st2" d="M200.8,128H183c-1.9,0-3.5-1.6-3.5-3.5v-0.3c0-1.9,1.6-3.5,3.5-3.5h17.8c1.9,0,3.5,1.6,3.5,3.5v0.3
+		C204.3,126.4,202.7,128,200.8,128z"/>
+</g>
+<path id="scar" class="st3" d="M157.9,1H171c0.3,0,0.5,0.3,0.4,0.6l-6.7,16c-0.1,0.1,0,0.3,0,0.4l6.8,10.8c0.1,0.1,0.1,0.3,0,0.4
+	l-6.9,15.9V31.6c0-0.1,0-0.2-0.1-0.3l-10.8-14.6c-0.1-0.1-0.1-0.2-0.1-0.4l3.8-15C157.5,1.1,157.7,1,157.9,1z"/>
+<path id="g1" d="M25.5,141.1c3.7-0.5,9.2-2.6,16.4-6.2c6.6-3.2,12.1-4.8,16.5-4.8c1.9,0,3.9,0.1,6,0.3v12.5v-0.5v21.5
+	c0.6,2.7-2.4,6.7-9.1,12.2c-8.1,6.6-16,10.5-23.6,11.6L27,187c-4.6-3.8-9.1-7.6-13.4-11.4c-7.8-6.9-12.2-12.4-13.1-16.4
+	C0.2,152.1,0,144.6,0,136.9c0-11.1,0.4-24.1,1.2-39.1c12-9.2,24.6-16.2,37.5-21h3.9L56.4,94c1.6,1.7,3,4.1,4,7.3l-21.5,16.5
+	c2.7-3.6,4-6.7,4-9.4c0-0.7-0.1-1.4-0.3-2.2c0.1-0.4,0.2-0.9,0.2-1.4c0-1.6-1.8-7.3-5.5-16.8c-2.9,1.2-6.9,3.1-11.9,5.6
+	c-2.8,1.9-4.6,4.2-5.5,7.1v66.9c0.6,1.7,2.3,3.9,5.1,6.3c2.5,2.3,4.7,3.9,6.6,4.8c7.7-2.5,12.4-5.1,13.9-8v-26.7
+	c-2,0.8-4.1,1.2-6.4,1.2C35.1,145.1,30.6,143.8,25.5,141.1z"/>
+<path id="g2" d="M360.3,104.9v40.6l-1.2,36.9c-9.4,8.3-17.9,15.5-25.6,21.6c-2.9,2.3-4.9,3.4-6.1,3.4c-0.4,0-0.8-0.2-1.1-0.5
+	l-7.2-12.7c-1.3-3-2-5-2-6.2c0-1.2,0.8-2.3,2.3-3.2l14.2-8.3v0.6c-2.2,2.1-3.4,4-3.7,5.7c0.6,2.6,1.5,6.3,2.6,11.1
+	c0.5,2.4,1,3.5,1.4,3.4c0.7-0.1,3.7-2.5,9.1-7.3c2.4-2.2,3.8-4.4,4.3-6.6V179c0,0.3-0.1-9.7-0.3-30l-11.6,14.1l-15-9l-3.4-35.1
+	l15.7-23.1l13.1,7.3c-0.1-3-0.2-5.4-0.3-7.3c1.8,1.4,5,3.2,9.5,5.2C358.5,102.8,360.3,104,360.3,104.9z M347.2,143.6
+	c-0.2-10.7-0.6-21.5-1.1-32.6l-12.2-7.1l-1.9,45.5l4.6,4L347.2,143.6z"/>
+<path id="l" d="M386.6,173.3c-0.2,0.4-0.3,0.8-0.3,1.2c0,1.9,2.5,4.9,7.4,9.1L381,179c-4.9-1.9-7.6-4.1-7.9-6.6l0.6-86.3
+	c5-2.8,7.8-4.5,8.3-5.3l5.1-7.1v19.6L386.6,173.3z"/>
+<path id="e" d="M433.8,128.8l-3.9,8c-4-2.4-8.6-3.6-13.8-3.6c-3.1,0-5,0.4-5.7,1.2l1.1,25.3c0.8,1.8,2.6,3.3,5.3,4.8
+	c2.1-2.7,3.4-6,4.2-10c0.1-0.4,0.4-3,0.8-7.9l6.8,8.6l-9.4,13.4l-7.9,0.2l-15.6-13.6c-0.8-3.9-1.2-8.4-1.2-13.4
+	c0-7.2,0.7-14.8,2.2-22.7l17.3-13.6c1.2-0.4,2.3-0.4,3.1,0.2l12.5,8.2L433.8,128.8z M422.7,129.7l-7.9-17.8
+	c-0.7-0.9-1.2-1.4-1.4-1.4c-0.4,0-0.8,0.4-1.2,1.1l-1.8,17.6C416.1,129,420.2,129.1,422.7,129.7z"/>
+</svg>
     </div>
     <input type="text" />
     <div>
